[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-control-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fmpy>=0.3.26",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "pydantic>=2.12.4",
    "scipy>=1.16.3",
]

[tool.setuptools.packages.find]
where = ["src"]
