[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-control-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darglint>=1.8.1",
    "fmpy>=0.3.26",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "pydantic>=2.12.4",
    "scipy>=1.16.3",
    "uuid>=1.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "pytest>=9.0.0",
]
